package com.frostwizard4.Neutrino.entity;

import net.minecraft.client.render.entity.EntityRendererFactory;
import software.bernie.geckolib3.renderers.geo.GeoEntityRenderer;

public class RatEntityRenderer extends GeoEntityRenderer<RatEntity>
{
    public RatEntityRenderer(EntityRendererFactory.Context ctx) {
        super(ctx, new RatModel());
        this.shadowRadius = 0.5F;
    }
}